--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" id="favicon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Affiliate</title>
-
+  <title>affiliate</title>
   <!-- CLARITY -->
 <!--   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
@@ -15,8 +14,8 @@
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "pdeafuqayx");
   </script> -->
-  <script type="module" crossorigin src="/static/assets/index-CoP5QZPe.js"></script>
-  <link rel="stylesheet" crossorigin href="/static/assets/index-DcYl_sxB.css">
+  <script type="module" crossorigin src="/static/assets/index-CaBboZKj.js"></script>
+  <link rel="stylesheet" crossorigin href="/static/assets/index-CyRVzwLH.css">
 </head>
 
 <body>
